-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
None
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/4ffebbeb-435d-48f2-9f56-b204dfebc6cb
test_154i failed with the following error:
mkdir: created directory 'thislongpathnameisforaverydeepsubdirthatwewanttotestagainst71' mkdir: created directory 'thislongpathnameisforaverydeepsubdirthatwewanttotestagainst72' mkdir: created directory 'thislongpathnameisforaverydeepsubdirthatwewanttotestagainst73' lfs fid2path: cannot find /mnt/lustre [0x200001b74:0x8ce:0x0]: Value too large for defined data type sanity test_154i: @@@@@@ FAIL: fid2path failed (1)
Test session details:
clients: https://build.whamcloud.com/job/lustre-master/4581 - 4.18.0-513.24.1.el8_9.x86_64
servers: https://build.whamcloud.com/job/lustre-master/4581 - 4.18.0-513.24.1.el8_lustre.x86_64
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_154i - fid2path failed (1)
- mentioned in
-
Page Loading...