LU-18294 lmv: return ENAMETOOLONG on fid2path buffer overflow

lmv_fid2path() returns -EOVERFLOW when the combined multi-MDT
path exceeds the buffer size during path concatenation. However,
ll_fid2path() only retries with a larger buffer on -ENAMETOOLONG.
This causes the error to propagate to userspace as an unrecoverable
"Value too large for defined data type" error.

The bug is triggered when fid2path resolves a path that crosses
MDT boundaries and the individual MDT path fits in the initial
buffer (PATH_MAX) but the concatenated path exceeds it.

Change the error code from -EOVERFLOW to -ENAMETOOLONG so that
ll_fid2path() catches it and retries with a larger buffer. This
is consistent with how mdt_path_current() handles the same
buffer overflow condition.

Signed-off-by: Sohei Koyama <skoyama@ddn.com>
Change-Id: Iaf938768a2d820f5b9f49055b4bbecc393002a51
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64347
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>